# pngquant-py

./: Cargo.toml  LICENSE  README.md  pngquant_py.pyi  pyproject.toml
.github/workflows/: CI.yml
examples/: main.py
src/: lib.rs
