[package]
name = "pngquant-py"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pngquant_py"
crate-type = ["cdylib"]

[dependencies]
imagequant = "4.4.1"
pyo3 = "0.27.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
png = "0.17"
